--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,17 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.example.docker.DockerApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
