--- a/pom.xml
+++ b/pom.xml
@@ -30,23 +30,13 @@
 		</dependency>
 
 	</dependencies>
-
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.example.docker</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-
-		</plugins>
-	</build>
+	   <plugins>
+		   <plugin>
+			  <groupId>org.springframework.boot</groupId>
+			  <artifactId>spring-boot-maven-plugin</artifactId>
+		   </plugin>
+	   </plugins>
+    </build>
 
 </project>
